# vPIM

./: LICENSE  README.md
apps/: pin.sh  sdkAction  upmem-driver-dkms_2021.3.0_amd64.deb
apps/upmem-code/: gen  helloworld  helloworld_host  run_helloworld.sh  sampleGenerator.c  seqreader_example  seqreader_example.c
apps/upmem-pkgs/: upmem-driver-dkms_2023.1.0_amd64.deb
apps/vPrIM/: LICENSE  README.md  run_strong_full.py  run_strong_rank.py  run_vprim.py
code/: nsfc-set-socket.sh  nsfc-set-socket2.sh  run-firecracker.sh  run-firecracker2.sh  vpim_driver_setup.tar.xz
code/firecracker/src/devices/: Cargo.toml  build.rs
code/firecracker/src/devices/src/: lib.rs
code/firecracker/src/devices/src/clib/: byte_interleave_avx512.c  client_zmq.c  helloworld.c  write_to_rank.c
code/firecracker/src/devices/src/virtio/: mod.rs
code/firecracker/src/devices/src/virtio/balloon/: event_handler.rs  test_utils.rs
code/firecracker/src/devices/src/virtio/vpim/: device.rs  dpu_addr_translation.rs  event_handler.rs  mod.rs  persist.rs  test_utils.rs
code/firecracker/src/devices/src/virtio/vpim/mappings/: mod.rs
code/firecracker/src/devices/src/virtio/vpim/mappings/xeon_sp_mapping/: mod.rs  operations.rs  tests.rs  utilities.rs
code/firecracker/src/devices/src/virtio/vpim/request_handlers/: ci_handler.rs  config_handler.rs  mod.rs  rank_handler.rs  request.rs  tests_handler.rs  xfer_types.rs
code/firecracker/src/devices/src/virtio/vpim/utilities/: dpu_hw_functions.rs  dpu_sysfs.rs  hardware.rs  manager.rs  memory_utils.rs  mod.rs  types.rs  vpd.rs
(+455 files in other folders)
