[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
event-manager = ">=0.2.1"
libc = ">=0.2.39"
timerfd = ">=1.0"
versionize = ">=0.1.6"
chrono = "0.4.24"
versionize_derive = ">=0.1.3"
vm-superio = ">=0.4.0"
memmap2 = "0.5.7"
glob = "0.3.0"
hex = "0.3.1"
threadpool = "1.0"
crossbeam = "0.8.1"
tokio = { version = "~1.25", features = ["full"] }
lazy_static = "1.4"




dumbo = { path = "../dumbo" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }
net_gen = { path = "../net_gen" }
rate_limiter = { path = "../rate_limiter" }
serde = { version = ">=1.0.27", features = ["derive"] }
snapshot = { path = "../snapshot" }
utils = { path = "../utils" }
virtio_gen = { path = "../virtio_gen" }
vm-memory = { path = "../vm-memory" }
io_uring = { path = "../io_uring" }

[dev-dependencies]
proptest = { version = ">=1.0.0", default-features = false, features = ["std"] }
